Fix poam assets table overflow

--- a/client/src/app/pages/poam-processing/poam-details/poam-details.component.scss
+++ b/client/src/app/pages/poam-processing/poam-details/poam-details.component.scss
@@ -99,26 +99,21 @@ hr {
     width: 100%;
   }
 
-.p-datatable-thead > tr > th {
-  background-color: rgba(0, 0, 0, 0.1) !important;
-}
+  .p-datatable-thead > tr > th {
+    background-color: rgba(0, 0, 0, 0.1) !important;
+  }
 
-.p-datatable-thead > tr > th:hover {
-  background-color: rgba(100, 100, 100, 0.2) !important;
-  cursor: pointer;
-}
+  .p-datatable-thead > tr > th:hover {
+    background-color: rgba(100, 100, 100, 0.2) !important;
+    cursor: pointer;
+  }
 
   .stepper-content-wrapper {
     display: flex;
     flex-direction: column;
-    height: 420px;
-  }
-
-  .stepper-content {
-    flex: 1;
-    overflow-y: auto;
-    padding: 1rem;
-    margin-bottom: 0.5rem;
+    height: 500px;
+    width: 100%;
+    position: relative;
   }
 
   .stepper-buttons {
@@ -126,10 +121,28 @@ hr {
     justify-content: space-between;
     padding: 0 1rem 1rem;
     border-bottom: 1px solid var(--p-surface-700);
+    flex-shrink: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--p-surface-900);
+    z-index: 1;
+  }
 
-    &.first-panel {
-      justify-content: flex-end;
-    }
+  .stepper-content {
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding-bottom: 60px;
+    height: 100%;
+  }
+
+  .stepper-content-wrapper cpat-poam-assets {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    flex: 1;
   }
 
   .p-datatable {
@@ -198,9 +211,7 @@ hr {
 
 ::ng-deep .p-confirm-dialog {
   background-color: var(--p-surface-950);
-  box-shadow:
-    0 3px 6px rgba(0, 0, 0, 0.16),
-    0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   width: 450px !important;
 
   .p-dialog-header {
